--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,10 @@
 FROM python:3.8-slim
 
-ADD ./ ./
+#ADD ./ ./
+COPY . .
 
 RUN pip3 install -r requirements.txt
 
-CMD ["python3","-u", "api.py"]
+EXPOSE 3500
+
+CMD ["python3","-u","api.py"]
